# snu_downloader

./: .gitignore  README.md  calendar_fetch.py  cancellation_alarm.py  courses.py  main.py  misc.py  output.json  output_2022_Summer.json  output_2022_Winter.json  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ruff.yml
sugang/: 01_fetch_courses.py  02_find_remote.py  main.py
