[project]
name = "snu-downloader"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "MilkClouds", email = "milkclouds@snu.ac.kr" }]
dependencies = [
  "selenium",
  "yt-dlp",
  "requests",
  "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true